styling for get the app and newsletter sections added

--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ img {
     margin-top: .5rem;
 }
 
+.m-auto {
+    margin: auto;
+}
+
 /* HEADER STYLING */
 
 .navbar {
@@ -293,6 +297,53 @@ h4 {
     line-height: 2.5rem;
 }
 
+/* SECTION 04 */
+
+.app-container {
+    background: var(--hint-yellow);
+    padding: 3rem 6rem;
+    border-radius: 3rem;
+}
+
+.app-container .content h2 {
+    font-size: 4.5rem;
+}
+
+.app-container .image-container img {
+    width: 25rem;
+} 
+
+
+/* SECTION 05 */
+
+.input-container {
+    width: 43rem;
+    max-width: 100%;
+    background: var(--pure-white);
+    padding: .8rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 5px 8px;
+    border-radius: 1rem;
+}
+
+input[type="email"] {
+    flex: 1;
+    height: 7vh;
+    background: transparent;
+    border: none;
+    font-size: 1.1rem;
+    padding-left: 1rem;
+
+}
+
+input[type="email"]:focus {
+    outline: none;
+}
+
+
+
+
+
+
 
 /* FOOTER STYLING */
 
@@ -365,6 +416,16 @@ h4 {
     /* SECTION 01 */
     h2 {
         font-size: 3rem;
+    }
+
+
+    /* SECTION 04 */
+    .app-container {
+        padding: 2.2rem;
+    }
+
+    .app-container .content h2 {
+        font-size: 3.5rem;
     }
 
 }
