--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ img {
     margin-top: .5rem;
 }
 
+.mt-one-half {
+    margin-top: 1.5rem;
+}
+
 .m-auto {
     margin: auto;
 }
@@ -323,6 +327,7 @@ h4 {
     padding: .8rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0 5px 8px;
     border-radius: 1rem;
+    margin: 4rem auto 0 auto;
 }
 
 input[type="email"] {
@@ -342,10 +347,45 @@ input[type="email"]:focus {
 
 
 
-
-
-
 /* FOOTER STYLING */
+.footer-container {
+    margin-top: 10rem;
+    padding-block: 4rem;
+    background: var(--hint-yellow);
+}
+
+.footer-container .flex {
+    align-items: flex-start;
+}
+
+.footer-wrapper {
+    flex: 1;
+    flex-basis: 150px;
+}
+
+.footer-wrapper:nth-child(1){
+    flex: 2;
+    flex-basis: 300px;
+}
+
+.footer-wrapper .social-icon {
+    background: var(--pure-white);
+}
+
+.footer-wrapper .social-icon:hover {
+    background: var(--lead);
+    color: var(--pure-white);
+}
+
+.footer-link {
+    color: gray;
+    font-size: 1.1rem;
+    transition: .3s ease-in-out;
+}
+
+.footer-link:hover {
+    color: var(--lead);
+}
 
 
 
