--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ h4 {
     align-items: center;
     z-index: 99;
     box-shadow: rgba(0, 0, 0, 0.1) -10px -10px 20px;
+    transition: .3s ease-in-out;
 }
 
 .cart-tab-active {
@@ -319,8 +320,14 @@ h4 {
 .item {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 1rem;
+    padding-left: .7rem 1rem;
+    transition: all .5s ease-in-out;
+}
+
+.item.slide-out {
+    transform: translateX(50%);
 }
 
 .cart-list .item:nth-child(even) {
@@ -329,6 +336,10 @@ h4 {
 
 .item .image-container img {
     width: 5rem;
+}
+
+.item .detail {
+    flex: 2;
 }
 
 .item .item-image img {
