--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ h3 {
 .order-card {
     flex: 1;
     flex-basis: 300px;
+    flex-wrap: wrap;
     background: var(--pure-white);
     padding: 0 1rem 2rem 1rem;
     border: .1rem solid var(--gold-finger);
@@ -262,7 +263,7 @@ h4 {
     padding: 1.3rem 0 2rem 0;
 }
 
-/* CARD TAB */
+/* CART TAB */
 .cart-tab {
     background: var(--hint-yellow);
     position: fixed;
@@ -566,6 +567,22 @@ input[type="email"]:focus {
     /* SECTION 01 */
     h2 {
         font-size: 3rem;
+    }
+
+
+    /* SECTION 02 */
+
+    .card-list {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .order-card {
+        width: 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 
 
